--- a/mercadolivre/templates/loja/partials/_index_page.html
+++ b/mercadolivre/templates/loja/partials/_index_page.html
@@ -8,7 +8,7 @@
                 <div class="card ms-3 mt-3" style="width: 13rem;">
                     <img src="/media/{{item.imagem}}" class="card-img-top mt-2" alt="{{media_root}}\{{item.imagem}}">
                     <div class="card-body">
-                        <h5 class="card-title">{{item.nome.title}}</h5>
+                        <h5 class="card-title">{{item.nome}}</h5>
                         <p class="card-text">R${{item.valor}}</p>
                         <div>
                             <a href="{% url 'detalhe-item' item.id %}" class="btn btn-primary">Ver detalhes</a>
